k8s/arr/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: arr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: lscr.io/linuxserver/readarr:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8787
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config-nfs-pvc
      - name: books
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Books
      - name: downloads
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/downloads
