k8s/arr/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: arr
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: 8787
  selector:
    app: readarr
