k8s/arr/readarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "readarr.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: readarr
      port: 8787
